# telemetryd

./: Cargo.toml  flake.nix
telemetryd/: Cargo.toml
telemetryd/src/: config.rs  grpc.rs  lib.rs  main.rs
telemetryd/src/cli/: mod.rs
telemetryd/src/metrics/: mod.rs  service.rs
telemetryd/tests/: grpc_server.rs
