[package]
name = "telemetryd"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, features = ["std", "derive"] }
opentelemetry-proto = { version = "0.3.0", features = ["gen-tonic", "metrics"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
tonic = { version = "0.9", features = ["transport"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
